--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "glitch-hello-node",
-  "version": "0.1.0",
-  "description": "A simple Node app built on fastify, instantly up and running. Built to be remixed on Glitch.com.",
-  "main": "server.js",
+  "name": "fcc-imperial-metric-converter-boilerplate",
+  "version": "1.0.0",
+  "description": "Metric / Imperial Unit Converter",
+  "main": "./src/views/index.html",
   "scripts": {
-    "start": "node server.js"
+    "start": "parcel ./src/views/index.html",
+    "build": "parcel build ./src/views/index.html"
+  },
+  "devDependencies": {
+    "parcel": "^2.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.2.0"
   },
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "chai": "^4.4.1",
-    "chai-http": "^4.3.0",
-    "cors": "^2.8.5",
+    "body-parser": "1.20.2",
+    "chai": "5.1.1",
+    "chai-http": "5.0.0",
+    "cors": "2.8.5",
     "dotenv": "^8.6.0",
-    "express": "^4.19.2",
-    "mocha": "^8.4.0"
+    "express": "4.19.2",
+    "mocha": "^8.4.0",
+    "path": "0.12.7",
+    "fs-extra": "11.2.0"
   },
-  "engines": {
-    "node": "14.x"
-  },
-  "repository": {
-    "url": "https://glitch.com/edit/#!/glitch-hello-node"
-  },
-  "license": "MIT",
   "keywords": [
-    "node",
-    "glitch"
+    "css",
+    "javascript"
   ]
 }
